# agent_ai

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  makefile  pyproject.toml
agent_ai/agent/: agent_builder.py  embedding_search.py
agent_ai/config/: agent_config.json
agent_ai/memory/: memory_manager.py
agent_ai/prompts/: device_alarms.txt  energy_only.txt  input_guardrail.txt  intent_classifier.txt  rewrite_query_by_memory.txt  user_manual.txt
agent_ai/utils/: constants.py  read_files.py
alembic/: README  env.py
alembic/versions/: f79e67081552_create_table_agent_knowledge_embeddings.py  ff3d420cbce8_create_long_term_memory.py  ff5ac0a1173e_create_agent_schema.py
database/: populate_db.py
db_agent_ai/: __init__.py
db_agent_ai/agent/: __init__.py  agent_knowledge_embeddings.py  long_term_memory.py
server/: __init__.py
server/api/: routes.py
server/api/agent_ai_brain/v1/: agent_ai_brain.py
server/api/dependencies/: database.py  database_v2.py  settings.py
server/api/device_alarms_tool/v1/: device_alarms_tool.py
server/api/user_manual_tool/markdowns/eólica/: asset_performance_management.md  data_studio.md  prediction.md
server/api/user_manual_tool/v1/: user_manual_tool.py
server/core/: logger.py  middlewares.py  settings.py
server/schemas/: reference.py
server/utils/: singleton.py
templates/: index.html
